created table schema for postgresql db

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start": "webpack",
     "build": "webpack -d --watch",
     "seed": "node seed.js",
-    "test": "jest --detectOpenHandles",
-    "builds3": "NODE_ENV='production' grunt aws_s3:bundle"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "bluebird": "^3.7.0",
@@ -21,10 +20,11 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "mongodb": "^3.3.2",
-    "mongoose": "^5.7.5",
+    "mongoose": "^5.7.12",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.3",
     "path": "^0.12.7",
+    "pg": "^7.14.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
