Added data generation script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "nodemon server/server.js",
     "start": "webpack",
     "build": "webpack -d --watch",
-    "seed": "node seed.js",
+    "seed": "node ./database/seed1.js",
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
